--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
-
 {
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "public"
         }
+      }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
     ]
-}
+  }
+  
